# django-context-decorator

./: .travis.yml  README.rst  django_context_decorator.py  pyproject.toml  setup.py  test_context.py  test_context_renaming.py  test_mixins.py
