[project]
name = "django_context_decorator"
version = "1.6.0"
description = "A context decorator for Django views"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["django", "context", "templates"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
homepage = "https://github.com/rixx/django-context-decorator"
Issues = "https://github.com/rixx/django-context-decorator/issues/"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "django_context_decorator"

# flit and hatch make it easy to build single-file packages.
# setuptools made it impossible, so I randomly picked flit.
